# EventCheckin.Api/Models/AuthViewModels.cs
@@ -56,8 +56,6 @@ namespace EventCheckin.Api.Models
         [Required]
         public string UserName { get; set; }
 
-        [Required]
-        [DataType(DataType.Password)]
         public string Password { get; set; }
 
         public bool RememberMe { get; set; }
