# EventCheckin.ClientApp/src/app/api/models/login-view-model.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface LoginViewModel {
-  password: string;
+  password?: string | null;
   rememberMe?: boolean;
   userName: string;
 }
